# DSPCT

./: .gitignore  README.md  pyproject.toml
docs/assignment_2/: assignment_2.md
docs/assignment_3/: assignment_3.md
src/assignment_1/: main.py
src/assignment_2/: main.py
src/assignment_3/: main.py
